--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -176,7 +176,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Downloads/index.html"
+export_path="../../../Downloads/TheGiverDemo/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
